trabalho/login/estilo/media-query.css
@media screen and (min-width: 768px) and (max-width: 992px) {
    body {
        background-image: linear-gradient(to bottom, #c6c6c6, black);
    }

    section#login {
        width: 80vw;
        height: 280px;
    }

    section#login > div#imagem {    
        background-position: left;
        float: left;
        width: 35%;
        height: 100%;
    }

    section#login > div#formulario {
        float: right;
        width: 65%;
    }

    div#formulario > p {
        font-size: 1em;
    }

    div.campo > input {
        width: 84%;
    }
    
}

@media screen and (min-width: 992px) {
    body {
        background-image: linear-gradient(to bottom, #c6c6c6, black);
    }

    section#login {
        width: 950px;
        height: 350px;
    }

    section#login > div#imagem {
        float: right;
        width: 50%;
        height: 100%;
    }
    
    section#login > div#formulario {
        float: left;
        width: 50%;
    }
    div#formulario > h1 {
        font-size: 2em;
    }

    div#formulario > p {
        font-size: 1.2em;
    }

    div.campo > input {
    width: 85%;
    }
}

